--- a/index.css
+++ b/index.css
@@ -191,6 +191,7 @@ th {
     bottom: 20px;
     right: 20px;
     color: rgb(77, 76, 76);
+    background-color: white;
     padding: 10px 20px;
     border: 1px solid rgb(218, 218, 218);
     border-radius: 5px;
